# special_functions

./: .buildinfo  .cirrus.star  .coveragerc  .gitignore  .setup.cfg.swp  .setup.py.swp  .tokeignore  CHANGELOG.rst  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.rst  besselh.html  besseli.html  besselj.html  besselk.html  bessely.html  changelog.html  environment.yml  genindex.html  index.html  install.html  list.html  lngamma.html  loggamma.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup-bkup.py  setup.cfg  setup.py  test-large.yml  tests.html  tox.ini
.github/workflows/: .build-linux.yml.swp  .build-macos.yml.swp  .build-windows.yml.swp  .check-manifest.yml.swp  .deploy-conda.yml.swp  .deploy-conda2.yml.swp  .deploy-conda3.yml.swp  .deploy-docs.yml.swp  .deploy-pypi.yml.swp  build-linux.yml  build-macos.yml  build-windows.yml  build-windows2.yml  check-manifest.yml  codecov.yml  deploy-conda.yml  deploy-conda2.yml  deploy-conda3.yml  deploy-docs.yml  deploy-pypi-2.yml  deploy-pypi-test.yml  deploy-pypi.yml  deploy-pypi2.yml  test-large2.yml
.mesonpy-7nd71bcl/meson-private/: coredata.dat~
_modules/: index.html  modules.html  modules.rst  special_functions.html  special_functions.rst
_modules/special_functions/: cython_wrappers.html
_sources/: besselh.rst.txt  besselj.rst.txt  besselk.rst.txt  bessely.rst.txt  index.rst.txt  install.rst.txt  list.rst.txt  lngamma.rst.txt  loggamma.rst.txt  quickstart.rst.txt  tests.rst.txt
_sources/_modules/: special_functions.rst.txt
_sources/api/: besselh.rst.txt  besselj.rst.txt  lngamma.rst.txt
_sources/notebooks/: special_functions.ipynb.txt
api/: besselh.html  besseli.html  besselj.html  besselk.html  bessely.html  list.html  lngamma.html
bld-conda/: channeldata.json  index.html
bld-conda/linux-64/: index.html  repodata_from_packages.json  repodata_from_packages.json.bz2  special_functions-0.0.3-py27h3218e01_0.tar.bz2  special_functions-0.0.3-py36h3218e01_0.tar.bz2  special_functions-0.0.3-py37h3218e01_0.tar.bz2  special_functions-0.0.3-py38h3218e01_0.tar.bz2  special_functions-0.0.3-py39h3218e01_0.tar.bz2
bld-conda/noarch/: index.html
conda/: conda_build_config.yaml  meta.yaml
conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml
conda_recipe/: meta.yaml
docs/: RecursiveGlob.py  besselh.rst  besseli.rst  besselj.rst  besselk.rst  bessely.rst  conf.py  index.rst  install.rst  loggamma.rst  quickstart.rst  requirements.txt  tests.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  examples.doctree  index.doctree  install.doctree  introduction.doctree  quickstart.doctree  tests.doctree
docs/_build/doctrees/_modules/: modules.doctree  special_functions.doctree
docs/_build/html/: changelog.html  examples.html  genindex.html  index.html  install.html  introduction.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  tests.html
docs/_build/html/_modules/: index.html  modules.html  special_functions.html
docs/_build/html/_modules/special_functions/: py_wrappers.html
docs/_build/html/_sources/: index.rst.txt  install.rst.txt  tests.rst.txt
docs/_build/html/_sources/_modules/: modules.rst.txt
docs/_modules/: special_functions.rst
docs/source/: besselj.rst  besselk.rst  bessely.rst  conf.py  index.rst  install.rst  list.rst  lngamma.rst
docs/source/_static/css/: custom.css
docs/source/api/: besseli.rst  besselk.rst  bessely.rst
notebooks/: Special Functions.ipynb  environment.yml  special_functions.html
special_functions/: __config__.py  __init__.pxd  __init__.py  _complex_functions.pxd  _complex_functions.pyx  amos_wrapper.h  besselh.pxd  besselh.pyx  besseli.pxd  besseli.pyx  besselj.pxd  besselj.pyx  besselk.pxd  besselk.pyx  bessely.pxd  bessely.pyx  cbesselh.pxd  cbesselh.pyx  cbesseli.pxd  cbesseli.pyx  cbesselj.pxd  cbesselj.pyx  cbesselk.pxd  cbesselk.pyx  cbessely.pxd  cbessely.pyx  cephes_wrapper.h  cython_wrappers.py  fortran_defs.h  gamma.pyx  lngamma.pxd  lngamma.pyx  meson.build  py_wrappers.py
special_functions/_extern/: meson.build
special_functions/_extern/cephes/cprob/: const.c  expx2.c  gamma.c  unity.c
tests/: requirements.txt  test_all.py  test_besselh.py  test_besseli.py  test_besselj.py  test_besselk.py  test_bessely.py  test_lngamma.py
tools/: cibw_before_build_macos-2.sh  cibw_before_build_macos.sh
tools/archive/: cibw_before_build_macos-2.sh  gfortran_utils.sh
tools/ci/: cirrus_deploy_conda.yml  cirrus_deploy_conda_linux_aarch64.yml  cirrus_deploy_conda_macosx_arm64.yml  cirrus_deploy_pypi.yml  cirrus_deploy_pypi_linux_aarch64.yml  cirrus_deploy_pypi_macosx_arm64.yml  cirrus_wheels.yml
tools/wheels/: cibw_before_build.sh  gfortran_utils.sh  upload_wheels.sh  upload_wheels_pypi.sh
