[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "numpy>1.11", "scipy>=1.5", "cython>=0.29.35"]
# requires = [
#     "meson-python>=0.15.0",
#     "Cython>=0.29.35,!=3.0.3",  # when updating version, also update check in meson.build
#
#     # default numpy requirements
#     "numpy==1.22.4; python_version<='3.10' and platform_python_implementation != 'PyPy'",
#     "numpy==1.23.2; python_version=='3.11' and platform_python_implementation != 'PyPy'",
#     "numpy>=1.26.0,<1.27; python_version=='3.12'",
#
#     # PyPy requirements; 1.25.0 was the first version to have pypy-3.9 wheels,
#     # and 1.25.0 also changed the C API target to 1.19.x, so no longer a need
#     # for an exact pin.
#     "numpy>=1.25.0; python_version>='3.9' and platform_python_implementation=='PyPy'",
#
#     "scipy>=1.5",
# ]

[project]
name = "special_functions"
license = {file = "LICENSE.txt"}
readme = "README.rst"
version = "0.2.6"
authors = [
    {name = "Siavash Ameli", email = "sameli@berkeley.edu" }
]
description = "Cython and Python API for special functions."
keywords = ['special-functions', 'bessel-function', 'gamma-function']
requires-python = ">=3.8"
platforms = ['Linux', 'OSX', 'Windows']
classifiers = [
    'Programming Language :: Cython',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
    'Natural Language :: English',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

# [project.optional-dependencies]
# test = { file = ["./test/requirements.txt"] }
# docs = { file = ["./docs/requirements.txt"] }

[project.urls]
homepage = "https://ameli.github.io/special_functions/"
documentation = "https://ameli.github.io/special_functions/"
source = 'https://github.com/ameli/special_functions/'
download = 'https://github.com/ameli/special_functions/archive/main.zip'
tracker = "https://github.com/ameli/special_functions/issues"
