# SPDX-FileCopyrightText: Copyright 2021, Siavash Ameli <sameli@berkeley.edu>
# SPDX-License-Identifier: BSD-3-Clause
# SPDX-FileType: SOURCE
#
# This program is free software: you can redistribute it and/or modify it
# under the terms of the license found in the LICENSE.txt file in the root
# directory of this source tree.


amos_double_precision_sources = [
    'amos/double_precision/dgamln.f',
    'amos/double_precision/fdump.f',
    'amos/double_precision/j4save.f',
    'amos/double_precision/xercnt.f',
    'amos/double_precision/xerhlt.f',
    'amos/double_precision/xermsg.f',
    'amos/double_precision/xerprn.f',
    'amos/double_precision/xersve.f',
    'amos/double_precision/xgetua.f',
    'amos/double_precision/zabs.f',
    'amos/double_precision/zacai.f',
    'amos/double_precision/zacon.f',
    'amos/double_precision/zairy.f',
    'amos/double_precision/zasyi.f',
    'amos/double_precision/zbesh.f',
    'amos/double_precision/zbesi.f',
    'amos/double_precision/zbesj.f',
    'amos/double_precision/zbesk.f',
    'amos/double_precision/zbesy.f',
    'amos/double_precision/zbinu.f',
    'amos/double_precision/zbiry.f',
    'amos/double_precision/zbknu.f',
    'amos/double_precision/zbuni.f',
    'amos/double_precision/zbunk.f',
    'amos/double_precision/zdiv.f',
    'amos/double_precision/zexp.f',
    'amos/double_precision/zkscl.f',
    'amos/double_precision/zlog.f',
    'amos/double_precision/zmlri.f',
    'amos/double_precision/zmlt.f',
    'amos/double_precision/zrati.f',
    'amos/double_precision/zs1s2.f',
    'amos/double_precision/zseri.f',
    'amos/double_precision/zshch.f',
    'amos/double_precision/zsqrt.f',
    'amos/double_precision/zuchk.f',
    'amos/double_precision/zunhj.f',
    'amos/double_precision/zuni1.f',
    'amos/double_precision/zuni2.f',
    'amos/double_precision/zunik.f',
    'amos/double_precision/zunk1.f',
    'amos/double_precision/zunk2.f',
    'amos/double_precision/zuoik.f',
    'amos/double_precision/zwrsk.f',
]

amos_single_precision_sources = [
    'amos/single_precision/cacai.f',
    'amos/single_precision/cacon.f',
    'amos/single_precision/cairy.f',
    'amos/single_precision/casyi.f',
    'amos/single_precision/cbesh.f',
    'amos/single_precision/cbesi.f',
    'amos/single_precision/cbesj.f',
    'amos/single_precision/cbesk.f',
    'amos/single_precision/cbesy.f',
    'amos/single_precision/cbinu.f',
    'amos/single_precision/cbiry.f',
    'amos/single_precision/cbknu.f',
    'amos/single_precision/cbuni.f',
    'amos/single_precision/cbunk.f',
    'amos/single_precision/ckscl.f',
    'amos/single_precision/cmlri.f',
    'amos/single_precision/crati.f',
    'amos/single_precision/cs1s2.f',
    'amos/single_precision/cseri.f',
    'amos/single_precision/cshch.f',
    'amos/single_precision/cuchk.f',
    'amos/single_precision/cunhj.f',
    'amos/single_precision/cuni1.f',
    'amos/single_precision/cuni2.f',
    'amos/single_precision/cunik.f',
    'amos/single_precision/cunk1.f',
    'amos/single_precision/cunk2.f',
    'amos/single_precision/cuoik.f',
    'amos/single_precision/cwrsk.f',
    'amos/single_precision/fdump.f',
    'amos/single_precision/gamln.f',
    'amos/single_precision/j4save.f',
    'amos/single_precision/r1mach.f',
    'amos/single_precision/xercnt.f',
    'amos/single_precision/xerhlt.f',
    'amos/single_precision/xermsg.f',
    'amos/single_precision/xerprn.f',
    'amos/single_precision/xersve.f',
    'amos/single_precision/xgetua.f',
]

amos_mach_sources = [
    'amos/mach/d1mach.f',
    'amos/mach/i1mach.f',
]

cephes_bessel_sources = [
    'cephes/bessel/airy.c',
    'cephes/bessel/hyp2f1.c',
    'cephes/bessel/hyperg.c',
    'cephes/bessel/i0.c',
    'cephes/bessel/i1.c',
    'cephes/bessel/iv.c',
    'cephes/bessel/j0.c',
    'cephes/bessel/j1.c',
    'cephes/bessel/jn.c',
    'cephes/bessel/jv.c',
    'cephes/bessel/k0.c',
    'cephes/bessel/k1.c',
    'cephes/bessel/kn.c',
    'cephes/bessel/psi.c',
    'cephes/bessel/struve.c',
    'cephes/bessel/yn.c',
]

cephes_cmath_sources = [
    'cephes/cmath/isnan.c',
]

cephes_cprob_sources = [
    'cephes/cprob/bdtr.c',
    'cephes/cprob/btdtr.c',
    'cephes/cprob/chdtr.c',
    'cephes/cprob/const.c',
    'cephes/cprob/drand.c',
    'cephes/cprob/expx2.c',
    'cephes/cprob/fdtr.c',
    'cephes/cprob/gamma.c',
    'cephes/cprob/gdtr.c',
    'cephes/cprob/igam.c',
    'cephes/cprob/igami.c',
    'cephes/cprob/incbet.c',
    'cephes/cprob/incbi.c',
    'cephes/cprob/kolmogorov.c',
    'cephes/cprob/mtherr.c',
    'cephes/cprob/nbdtr.c',
    'cephes/cprob/ndtr.c',
    'cephes/cprob/ndtri.c',
    'cephes/cprob/pdtr.c',
    'cephes/cprob/polevl.c',
    'cephes/cprob/stdtr.c',
    'cephes/cprob/unity.c',
]

cephes_eval_sources = [
    'cephes/eval/chbevl.c',
    'cephes/eval/mtherr.c',
    'cephes/eval/polevl.c',
]

# The "amos_sources" list is defined in the parent meson.build file
amos_sources += files(amos_double_precision_sources)
amos_sources += files(amos_single_precision_sources)
amos_sources += files(amos_mach_sources)

# The "cephes_sources" list is defined in the parent meson.build file
cephes_sources += files(cephes_bessel_sources)
cephes_sources += files(cephes_cmath_sources)
cephes_sources += files(cephes_cprob_sources)
cephes_sources += files(cephes_eval_sources)
